Closed
Bug 309834
Opened 20 years ago
Closed 20 years ago
useless code in wallet source
Categories
(SeaMonkey :: Passwords & Permissions, defect)
SeaMonkey
Passwords & Permissions
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: sam, Assigned: sam)
Details
Attachments
(1 file)
|
949 bytes,
patch
|
neil
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.10) Gecko/20050815 Firefox/1.0.6
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.10) Gecko/20050815 Firefox/1.0.6
Some code around line 2310 in extensions/wallet/src/singsign.cpp sets data2 to
the same value as data:
data2 = NS_STATIC_CAST(si_SignonDataStruct*, signonData->ElementAt(j));
data has been set to this very exact value (considering the branch we are in)
and can be used in this block instead of data2
Reproducible: Always
Steps to Reproduce:
| Assignee | ||
Comment 1•20 years ago
|
||
You'll need to seek review from someone if you want your code to be checked-in.
->MAS: Password Manager (Hope that's the right place)
Assignee: nobody → dveditz
Product: Firefox → Mozilla Application Suite
QA Contact: password.manager
Updated•20 years ago
|
Attachment #197233 -
Flags: superreview?(bzbarsky)
Attachment #197233 -
Flags: review?(neil)
Updated•20 years ago
|
Attachment #197233 -
Flags: review?(neil) → review+
Updated•20 years ago
|
Assignee: dveditz → sam
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•20 years ago
|
Attachment #197233 -
Flags: superreview?(bzbarsky) → superreview+
Updated•20 years ago
|
Whiteboard: [checkin needed]
Comment 3•20 years ago
|
||
Checked in on trunk. Samuel, thanks for the patch! I'm sorry it took so long to get checked in; the problem is that generally reviewers only see patches they've been asked for review for. See http://www.mozilla.org/hacking/life-cycle.html for more info.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
You need to log in
before you can comment on or make changes to this bug.
Description
•