Remove some redundant code.  Bug 309834, patch by Samuel Tardieu <sam@rfc1149.net>, r=neil, sr=bzbarsky